--- a/app/src/main/res/layout/listitem_bjrk.xml
+++ b/app/src/main/res/layout/listitem_bjrk.xml
@@ -133,7 +133,52 @@
             android:textColor="@color/white" />
     </LinearLayout>
 
+    <LinearLayout
+        style="@style/layout1"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="15dp"
+            android:layout_weight="5"
+            android:gravity="center_vertical"
+            android:text="库        位"
+            android:textColor="#323232"
+            android:textSize="15sp" />
+
+        <EditText
+            android:id="@+id/et_kw"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="2dp"
+            android:layout_weight="15"
+            android:background="@drawable/editview_border"
+            android:ems="10"
+            android:gravity="center"
+            android:hint="库位码"
+            android:imeOptions="actionDone"
+            android:maxLines="1"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
+            android:singleLine="true"
+            android:text=""
+            android:textCursorDrawable="@null" />
+
+        <Button
+            android:id="@+id/list_bjrk_del_kw"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_alignParentRight="true"
+            android:layout_gravity="center"
+            android:layout_margin="3dp"
+            android:layout_weight="3"
+            android:background="@mipmap/ic_delete"
+            android:clickable="true"
+            android:gravity="center"
+            android:textColor="@color/white" />
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
