--- a/app/src/main/res/layout/fragment_transfer.xml
+++ b/app/src/main/res/layout/fragment_transfer.xml
@@ -546,13 +546,13 @@
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="15dp"
                         android:layout_marginTop="15dp"
-                        android:background="@mipmap/ic_ykcz" />
+                        android:background="@mipmap/ic_zj" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="1dp"
-                        android:text="移库操作"
+                        android:text="库存查询"
                         android:textColor="#323232"
                         android:textSize="18sp" />
                 </LinearLayout>
@@ -584,15 +584,94 @@
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="15dp"
                         android:layout_marginTop="15dp"
-                        android:background="@mipmap/ic_mtfz" />
+                        android:background="@mipmap/ic_pd" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="1dp"
-                        android:text="唛头复制"
+                        android:text="库间调拨"
                         android:textColor="#323232"
                         android:textSize="18sp" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ly_bjpl"
+                android:layout_width="100dp"
+                android:layout_height="130dp"
+                android:background="@color/white"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:visibility="gone"
+                app:layout_alignSelf="flex_start"
+                app:layout_flexBasisPercent="33%">
+
+                <LinearLayout
+                    android:id="@+id/bjpl"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/layout_selector"
+                    android:clickable="true"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginRight="15dp"
+                        android:layout_marginTop="15dp"
+                        android:background="@mipmap/ic_ll" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="1dp"
+                        android:text="钣金配料"
+                        android:textColor="#323232"
+                        android:textSize="18sp" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ly_glgxjl"
+                android:visibility="gone"
+                android:layout_width="100dp"
+                android:layout_height="130dp"
+                android:background="@color/white"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                app:layout_alignSelf="flex_start"
+                app:layout_flexBasisPercent="33%">
+
+                <LinearLayout
+                    android:id="@+id/glgxjl"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/layout_selector"
+                    android:gravity="center"
+                    android:clickable="true"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:layout_marginTop="15dp"
+                        android:background="@mipmap/ic_glgxjl" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="1dp"
+                        android:text="关联关系建立"
+                        android:textColor="#323232"
+                        android:textSize="18sp"
+                        android:gravity="center"
+                        android:paddingRight="10dp"
+                        android:paddingLeft="10dp"/>
                 </LinearLayout>
             </LinearLayout>
 
