--- a/app/src/main/res/layout/listitem_fy_picking.xml
+++ b/app/src/main/res/layout/listitem_fy_picking.xml
@@ -123,6 +123,8 @@
 
         <LinearLayout
             style="@style/layout1"
+            android:paddingRight="8dp"
+            android:paddingBottom="1dp"
             android:focusable="true"
             android:focusableInTouchMode="true">
 
@@ -142,7 +144,7 @@
                 android:layout_height="match_parent"
                 android:layout_margin="2dp"
                 android:layout_weight="15"
-                android:background="@null"
+                android:background="@drawable/edit_bg"
                 android:ems="10"
                 android:gravity="center_vertical"
                 android:imeOptions="actionDone"
@@ -171,6 +173,7 @@
         <LinearLayout
             style="@style/layout1"
             android:focusable="true"
+            android:paddingRight="8dp"
             android:focusableInTouchMode="true">
 
             <TextView
@@ -189,7 +192,7 @@
                 android:layout_height="match_parent"
                 android:layout_margin="2dp"
                 android:layout_weight="15"
-                android:background="@null"
+                android:background="@drawable/edit_bg"
                 android:ems="10"
                 android:gravity="center_vertical"
                 android:imeOptions="actionDone"
@@ -246,6 +249,7 @@
 
             <LinearLayout
                 style="@style/layout1"
+                android:paddingRight="8dp"
                 android:layout_weight="1">
 
                 <TextView
@@ -263,9 +267,12 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="15"
+                    android:layout_margin="2dp"
+                    android:background="@drawable/edit_bg"
                     android:gravity="center_vertical"
                     android:imeOptions="actionDone"
                     android:inputType="numberDecimal"
+                    android:textCursorDrawable="@null"
                     android:textSize="15sp" />
             </LinearLayout>
 
