--- a/app/src/main/res/layout/listitem_ck_test.xml
+++ b/app/src/main/res/layout/listitem_ck_test.xml
@@ -22,7 +22,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="10dp"
-                android:text=""/>
+                android:text=""
+                android:visibility="gone"/>
             <ImageView
                 android:id="@+id/list_ck_img"
                 android:layout_width="wrap_content"
